# doodler

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  egg.sh  heroku.yml  pyproject.toml
app/: main.py
app/api/routes/: predictor.py
app/core/: config.py
app/helpers/: helpers.py
app/models/: prediction.py
app/services/: mobilenet.py  stickman.py
app/statics/: index.html  scripts.js
